added bullet points in build text

--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -209,10 +209,10 @@
 
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[19.5rem] 2xl:max-h-[26.5rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+						<div class="mt-6 mb-[24px] ml-7 mr-2 pr-0 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">最新更新信息 (0.7.3)</h2>
 
-							<ul class="text-sm space-y-4">
+							<ul class="list-inside list-disc text-sm space-y-4">
 								<li>不支持游戏手柄的游戏的游戏控制器键映射（注意：Genshin Impact 的本机控制器支持目前不起作用）</li>
 								<li>修复了元神冲击中爆发（终极）时鼠标重置的错误</li>
 								<li>更流畅的鼠标移动</li>
