--- a/public/lang/ru/index.html
+++ b/public/lang/ru/index.html
@@ -210,10 +210,10 @@
 
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[16rem] 2xl:max-h-[23.2rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+						<div class="mt-6 mb-[24px] ml-7 mr-2 pr-0 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">Информация о последнем обновлении (0.7.3)</h2>
 
-							<ul class="text-sm space-y-4">
+							<ul class="list-inside list-disc text-sm space-y-4">
 								<li>Назначение клавиш геймпада в играх, не поддерживающих геймпад (ВНИМАНИЕ: встроенная поддержка геймпада в Genshin Impact пока не работает)</li>
 								<li>Исправлена ошибка с остановкой камеры после использования Взрыва стихий в Genshin Impact</li>
 								<li>Более ровное движение мыши</li>
