--- a/public/lang/de/index.html
+++ b/public/lang/de/index.html
@@ -210,10 +210,10 @@
 
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[16.2rem] 2xl:max-h-[23.3rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+						<div class="mt-6 mb-[24px] ml-7 mr-2 pr-0 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">Aktuelle Update-Info (0.7.3)</h2>
 
-							<ul class="text-sm space-y-4">
+							<ul class="list-inside list-disc text-sm space-y-4">
 								<li>Gamecontroller-Tastenzuordnung für Spiele, die keine Gamepads unterstützen (HINWEIS: Genshin native Controller-Unterstützung funktioniert noch nicht)</li>
 								<li>Fehler beim Zurücksetzen der Maus bei Burst (Ultimate) in Genshin behoben</li>
 								<li>Flüssigere Mausbewegungen</li>
