changed copyright claims email

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -795,7 +795,7 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Copyright Claims</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
