--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -426,7 +426,7 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="/lang/cn/legal-notice" class="pr-4 hover:text-yellow-500 underline text-left">法律声明</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">版权声明</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-yellow-500">版权声明</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. 保留所有权利.</p>
