--- a/public/lang/de/changelog/index.html
+++ b/public/lang/de/changelog/index.html
@@ -811,7 +811,7 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="/lang/de/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Rechtlicher Hinweis</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Urheberrechtsansprüche</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-yellow-500">Urheberrechtsansprüche</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Alle Rechte vorbehalten.</p>
