--- a/public/lang/es/legal-notice/index.html
+++ b/public/lang/es/legal-notice/index.html
@@ -372,7 +372,7 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="/lang/es/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Aviso Legal</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Reclamaciones de derechos de autor</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-yellow-500">Reclamaciones de derechos de autor</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Todos los derechos reservados.</p>
