--- a/public/lang/id/faq/index.html
+++ b/public/lang/id/faq/index.html
@@ -742,7 +742,7 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="/lang/id/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legalitas</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Klaim Hak Cipta</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-yellow-500">Klaim Hak Cipta</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
