--- a/public/lang/ru/faq/index.html
+++ b/public/lang/ru/faq/index.html
@@ -763,7 +763,7 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="/lang/ru/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Правовая информация</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Жалобы на нарушение авторских прав</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-yellow-500">Жалобы на нарушение авторских прав</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Все права защищены.</p>
