--- a/public/lang/es/index.html
+++ b/public/lang/es/index.html
@@ -176,7 +176,7 @@
 		<div class="auto-closer hidden z-10 w-[100%] h-2 absolute"></div>
 
 		<!-- content -->
-		<main>
+		<main class="2xl:pt-8">
 			<!-- hero section -->
 			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-20 2xl:space-x-48 pt-28 pb-4 md:pb-8 lg:mt-auto">
 				<!-- text -->
@@ -241,9 +241,9 @@
 						<!-- bg gradient -->
 						<!-- <div class="rounded-lg absolute -inset-0.5 bg-gradient-to-b from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 md:group-hover:opacity-50 md:dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div> -->
 
-						<img class="shadow-md dark:hidden max-w-xs md:max-w-[44.7rem] 2xl:max-w-[55rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+						<img class="shadow-md dark:hidden max-w-xs md:max-w-[48rem] 2xl:max-w-[58.5rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[44.7rem] 2xl:max-w-[55rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot light" />
+						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[48rem] 2xl:max-w-[58.5rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
