--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -15,13 +15,13 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<!-- Roboto Font -->
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
-		<!-- Source Code Pro font-->
+		<!-- Source Sans Pro font-->
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 		<!-- Neon font -->
 		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 	</head>
 
-	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-sourceCodePro transition duration-200 ease-in-out">
+	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
 		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-40">
 			<div class="flex justify-between">
