--- a/public/lang/de/changelog/index.html
+++ b/public/lang/de/changelog/index.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="8-12 words max" />
 		<title>Änderungsprotokoll</title>
 		<link href="/css/styles.css" rel="stylesheet" />
-		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png" />
+		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.ico" />
 		<script src="/js/local-storage-track.js"></script>
 
 		<!-- fonts import -->
@@ -29,7 +29,7 @@
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
 					<a href="/lang/de" class="flex items-center">
-						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
+						<img class="h-14 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
 				</div>
