--- a/public/lang/es/index.html
+++ b/public/lang/es/index.html
@@ -23,10 +23,10 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-40">
+		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-4 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-10 xl:pl-10">
+				<div class="flex items-center lg:mr-10">
 					<a href="/lang/es" class="flex items-center">
 						<img class="h-14 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 						
