--- a/public/lang/cn/legal-notice/index.html
+++ b/public/lang/cn/legal-notice/index.html
@@ -24,26 +24,25 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-4 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
+		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-6 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-10">
+				<div class="flex items-center lg:mr-10 space-x-8">
 					<a href="/lang/cn" class="flex items-center">
 						<img class="h-14 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
-						
 					</a>
+					<!-- primary nav -->
+					<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
+						<a href="/lang/cn" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 主页 </a>
+						<!-- download nav download -->
+						<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 下载 </a>
+						<a href="/lang/cn/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 更新日志 </a>
+						<a href="/lang/cn/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 常见问题解答 </a>
+						<a href="/lang/cn/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 学分 </a>
+						<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">联系我们</button>
+					</div>
 				</div>
 
-				<!-- primary nav -->
-				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/lang/cn" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 主页 </a>
-					<!-- download nav download -->
-					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 下载 </a>
-					<a href="/lang/cn/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 更新日志 </a>
-					<a href="/lang/cn/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 常见问题解答 </a>
-					<a href="/lang/cn/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 学分 </a>
-					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">联系我们</button>
-				</div>
 
 				<!-- secondary nav -->
 				<div class="hidden xl:flex items-center space-x-5">
