--- a/public/lang/ru/changelog/index.html
+++ b/public/lang/ru/changelog/index.html
@@ -192,7 +192,7 @@
 					<!-- spinning circle and dotted line -->
 					<div class="flex flex-col items-center">
 						<!-- spinning circle -->
-						<div class="h-4 w-4 rounded-full border border-solid border-t-yellow-500 border-transparent animate-spin"></div>
+						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-yellow-500 border-t-yellow-500 border-gray-600 rotate-45"></div>
 						<!-- dotted line -->
 						<div class="dotted-line border-l-2 border-dotted border-gray-300 dark:border-gray-600 h-[4.5rem]"></div>
 					</div>
