--- a/public/lang/es/legal-notice/index.html
+++ b/public/lang/es/legal-notice/index.html
@@ -27,19 +27,18 @@
 		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-6 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-10 space-x-8">
+				<div class="flex items-center lg:mr-10 space-x-5">
 					<a href="/lang/es" class="flex items-center">
-						<img class="h-14 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
+						<img class="h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
-					<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-						<a href="/lang/es" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Inicio </a>
-						<!-- download nav download -->
-						<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Descargar </a>
-						<a href="/lang/es/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Cambios </a>
-						<a href="/lang/es/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-						<a href="/lang/es/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Créditos </a>
-						<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contacto</button>
+					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem]">
+						<a href="/lang/es" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Inicio </a>
+						
+						<a href="/lang/es/changelog/" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Cambios </a>
+						<a href="/lang/es/faq/" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
+						<a href="/lang/es/credits/" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Créditos </a>
+						<button class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Contacto</button>
 					</div>
 				</div>
 
