--- a/public/lang/id/faq/index.html
+++ b/public/lang/id/faq/index.html
@@ -24,22 +24,21 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-1 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
+		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-6 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-2 xl:pl-10">
+				<div class="flex items-center lg:mr-10 space-x-5">
 					<a href="/lang/id" class="flex items-center">
-						<img class="h-14 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
+						<img class="h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
-					<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-						<a href="/lang/id" class="w-20 text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Halaman Utama </a>
-						<!-- download nav download -->
-						<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Unduhan </a>
-						<a href="/lang/id/changelog/" class="w-24 text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Sejarah Perubahan </a>
-						<a href="/lang/id/faq/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Pertanyaan umum </a>
-						<a href="/lang/id/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Kredit </a>
-						<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Pesan Bantuan</button>
+					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem]">
+						<a href="/lang/id" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Halaman Utama </a>
+						
+						<a href="/lang/id/changelog/" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Sejarah Perubahan </a>
+						<a href="/lang/id/faq/" class="text-gray-100 rounded-full border border-[#B02AF5] px-5 py-1 bg-[#B02AF5] transition duration-300"> Pertanyaan umum </a>
+						<a href="/lang/id/credits/" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Kredit </a>
+						<button class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Pesan Bantuan</button>
 					</div>
 				</div>
 
