--- a/public/lang/ru/credits/index.html
+++ b/public/lang/ru/credits/index.html
@@ -24,21 +24,21 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-6 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
+		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-5 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-10 space-x-5">
+				<div class="flex items-center lg:mr-10 space-x-7">
 					<a href="/lang/ru" class="flex items-center">
 						<img class="h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem]">
-						<a href="/lang/ru" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Домой </a>
+						<a href="/lang/ru" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Домой </a>
 						
-						<a href="/lang/ru/changelog/" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Журнал изменений </a>
-						<a href="/lang/ru/faq/" class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> ЧаВо </a>
-						<a href="/lang/ru/credits/" class="text-gray-100 rounded-full border border-[#B02AF5] px-5 py-1 bg-[#B02AF5] transition duration-300"> Кредиты </a>
-						<button class="text-gray-300 hover:text-gray-100 rounded-full border border-gray-400 px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Связаться с нами</button>
+						<a href="/lang/ru/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Журнал изменений </a>
+						<a href="/lang/ru/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> ЧаВо </a>
+						<a href="/lang/ru/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Кредиты </a>
+						<button class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Связаться с нами</button>
 					</div>
 				</div>
 
