fixed contact us button

--- a/public/lang/cn/faq/index.html
+++ b/public/lang/cn/faq/index.html
@@ -38,7 +38,7 @@
 						<a href="/lang/cn/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> 更新日志 </a>
 						<a href="/lang/cn/faq/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> 常见问题解答 </a>
 						<a href="/lang/cn/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> 学分 </a>
-						<button class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">联系我们</button>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">联系我们</button>
 					</div>
 				</div>
 
