--- a/public/lang/de/faq/index.html
+++ b/public/lang/de/faq/index.html
@@ -38,7 +38,7 @@
 						<a href="/lang/de/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Änderungsprotokoll </a>
 						<a href="/lang/de/faq/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> FAQ </a>
 						<a href="/lang/de/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Kredite </a>
-						<button class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Kontakt</button>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Kontakt</button>
 					</div>
 				</div>
 
