--- a/public/lang/id/credits/index.html
+++ b/public/lang/id/credits/index.html
@@ -38,7 +38,7 @@
 						<a href="/lang/id/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Sejarah Perubahan </a>
 						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Pertanyaan umum </a>
 						<a href="/lang/id/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Kredit </a>
-						<button class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Pesan Bantuan</button>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Pesan Bantuan</button>
 					</div>
 				</div>
 
