--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -33,12 +33,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem]">
-						<a href="/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Home </a>
+						<a href="/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> Home </a>
 						
-						<a href="/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Changelog </a>
-						<a href="/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
-						<a href="/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Credits </a>
-						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Contact Us</button>
+						<a href="/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> Changelog </a>
+						<a href="/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> FAQ </a>
+						<a href="/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#E6349E] transition duration-300"> Credits </a>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300">Contact Us</button>
 					</div>
 				</div>
 
