--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -32,12 +32,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem]">
-						<a href="/lang/cn" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> 主页 </a>
+						<a href="/lang/cn" class="text-gray-100 rounded-full px-5 py-1 bg-[#E6349E] transition duration-300"> 主页 </a>
 						
-						<a href="/lang/cn/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> 更新日志 </a>
-						<a href="/lang/cn/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> 常见问题解答 </a>
-						<a href="/lang/cn/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> 学分 </a>
-						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">联系我们</button>
+						<a href="/lang/cn/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> 更新日志 </a>
+						<a href="/lang/cn/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> 常见问题解答 </a>
+						<a href="/lang/cn/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> 学分 </a>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300">联系我们</button>
 					</div>
 				</div>
 
