--- a/public/lang/id/credits/index.html
+++ b/public/lang/id/credits/index.html
@@ -33,12 +33,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem]">
-						<a href="/lang/id" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Halaman Utama </a>
+						<a href="/lang/id" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> Halaman Utama </a>
 						
-						<a href="/lang/id/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Sejarah Perubahan </a>
-						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Pertanyaan umum </a>
-						<a href="/lang/id/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Kredit </a>
-						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Pesan Bantuan</button>
+						<a href="/lang/id/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> Sejarah Perubahan </a>
+						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300"> Pertanyaan umum </a>
+						<a href="/lang/id/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#E6349E] transition duration-300"> Kredit </a>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#E6349E]  hover:bg-[#E6349E] transition duration-300">Pesan Bantuan</button>
 					</div>
 				</div>
 
