--- a/public/lang/ru/index.html
+++ b/public/lang/ru/index.html
@@ -31,13 +31,13 @@
 						<img class="h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
-					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem]">
+					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold">
 						<a href="/lang/ru" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Домой </a>
 						
 						<a href="/lang/ru/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Журнал изменений </a>
 						<a href="/lang/ru/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> ЧаВо </a>
 						<a href="/lang/ru/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Кредиты </a>
-						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300">Связаться с нами</button>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300 font-semibold">Связаться с нами</button>
 					</div>
 				</div>
 
@@ -48,17 +48,17 @@
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
 							<button class="group donate-nav-button  bg-yellow-500 dark:bg-[#791c0c] hover:bg-yellow-400 dark:hover:bg-[#992511] rounded-full px-5 py-1 transition duration-300">
-								<span class="text-[1.05rem] text-white transition-colors duration-200"> Пожертвовать</span>
+								<span class="text-[1.05rem] font-semibold text-white transition-colors duration-200"> Пожертвовать</span>
 							</button>
 						</div>
 					</div>
 
 					<!-- language button and menu-->
 					<ul>
-						<li class="relative text-[1.05rem]">
+						<li class="relative text-[1.05rem] font-semibold">
 							<!-- language btn -->
 							<button class="language-button flex items-center space-x-1 border border-gray-500 dark:border-gray-300 rounded-full px-5 py-1 transition-colors duration-200 group hover:border-gray-200 dark:hover:border-gray-200">
-								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-200 dark:group-hover:text-gray-200"> Русский </span>
+								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-200 dark:group-hover:text-gray-200 font-semibold"> Русский </span>
 								<!-- icon -->
 								<div class="">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 dark:text-gray-300 group-hover:text-gray-200 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
