added scrolling animation

--- a/public/lang/cn/legal-notice/index.html
+++ b/public/lang/cn/legal-notice/index.html
@@ -24,10 +24,10 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-body font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-5 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-nav-footer transition duration-200 ease-in-out filter drop-shadow-md z-20">
+		<nav class="nav-bar max-w-screen px-6 lg:pr-12 lg:pl-5 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-gray-100 dark:bg-body transition duration-200 ease-in-out filter  z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-10 space-x-7">
+				<div class="flex items-center lg:mr-10 space-x-10">
 					<a href="/lang/cn" class="flex items-center">
 						<img class="h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
@@ -405,6 +405,7 @@
 		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
 		<script src="/js/dark-mode.js"></script>
+		<script src="/js/scroll-animations.js"></script>
 		<script src="/js/donate-popup.js"></script>
 		<script src="/js/contact-popup.js"></script>
 		<script src="/js/auto-closer.js"></script>
