modified language button bg

--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -33,12 +33,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold">
-						<a href="/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Home </a>
+						<a href="/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Home </a>
 						
-						<a href="/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Changelog </a>
-						<a href="/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
-						<a href="/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300"> Credits </a>
-						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1 hover:border-[#B02AF5]  hover:bg-[#B02AF5] transition duration-300 font-semibold">Contact Us</button>
+						<a href="/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Changelog </a>
+						<a href="/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
+						<a href="/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Credits </a>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">Contact Us</button>
 					</div>
 				</div>
 
@@ -57,21 +57,21 @@
 					<!-- language button and menu-->
 					<ul>
 						<li class="relative text-[1.05rem] font-semibold">
-							<!-- language btn -->
-							<button class="language-button flex items-center space-x-1 border border-gray-500 dark:border-gray-300 rounded-full px-5 py-1 transition-colors duration-200 group hover:border-gray-200 dark:hover:border-gray-200">
-								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-200 dark:group-hover:text-gray-200 font-semibold"> English </span>
+							<!-- language button -->
+							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 transition-colors duration-200 hover:bg-[#B02AF5] group">
+								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-500 dark:group-hover:text-gray-200 font-semibold"> English </span>
 								<!-- icon -->
 								<div class="">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 dark:text-gray-300 group-hover:text-gray-200 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 text-gray-600 dark:text-gray-300 group-hover:text-gray-500 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7" />
 									</svg>
 								</div>
 							</button>
 
 							<!-- language menu -->
-							<div class="language-menu absolute bg-white dark:bg-nav-footer right-0 rounded-md px-[18px] pb-3 pt-6 transform transition-all duration-200 scale-0 opacity-0 -translate-y-2/4 ease-in-out">
+							<div class="language-menu absolute bg-gray-100 dark:bg-body right-0 rounded-md px-[23%] pb-3 pt-6 transform transition-all duration-200 scale-0 opacity-0 -translate-y-2/4 ease-in-out">
 								<!-- text -->
-								<ul class="space-y-4">
+								<ul class="space-y-4 flex flex-col items-center">
 									<li>
 										<a href="/lang/cn" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 简体中文 </a>
 									</li>
@@ -85,7 +85,7 @@
 										<a href="/lang/de" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsch </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Bahasa Indonesia </a>
+										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
 									</li>
 
 									<li class="hidden">
